app/resources/front/css/_modules/hero.styl
/***************************************/

.mod-hero
    position                            relative
    height                              calc( 100vh - 50px )
    overflow                            hidden

.mod-hero-background
    position                            relative
    height                              100%
    overflow                            hidden

    &:after
        content                         ""
        position                        absolute
        width                           100%
        height                          @width
        top                             0
        left                            0
        background-repeat               repeat
        background-position             top left
        z-index                         0


.mod-hero-picture
    display                             block
    width                               100%
    height                              100%

    &:after
        content                         ""
        position                        absolute
        background-color                rgba($color1, 0.7)
        width                           100%
        height                          @width

.mod-hero-img
    display                             block
    min-width                           420px
    max-width                           none
    translate-middle()

.mod-hero-content
    width                               80%
    max-width                           780px
    z-index                             1
    translate-middle()

.mod-hero-baseline
    display                             block
    margin-top                          20px
    font-size                           1.4rem
    line-height                         1.5
    color                               $color2
    text-align                          center
    text-transform                      uppercase
    font-1()

    a
        display                         inline-block
        color                           $color3

    h1
        color                           $color2
        font-size                       2.1rem
        line-height                     1.3
        margin-bottom                   20px
        font-b()

        strong
            display                     inline
            color                       $color3

        .highlight
            color                       $color4
            text-shadow                 0 2px 10px $color1

        br
            display                     none

.mode-hero-icon
    margin-top                          20px

    .icon-arrow-1-c
        display                         block
        width                           16px
        height                          10px
        margin                          0 auto
        background-repeat               no-repeat
        background-position             center center
        padding                         30px
        background-size                 3rem
        animation-duration              1200ms
        animation-name                  animateArrow
        animation-iteration-count       infinite
        hide-text()

.hero-effect
    position                            relative
    overflow                            hidden

    &:after
        content                         ""
        position                        absolute
        top                             0
        left                            0
        background-color                rgba($color2, 0.8)
        width                           100%
        height                          100%

    canvas
        position                        absolute
        top                             0
        left                            0
        width                           100%
        height                          100%

    .canvasbg
        z-index                         -10
        filter                          blur(3px)
        opacity                         0.6


@keyframes animateArrow
    0%
        transform                       translateY(-10px)

    50%
        transform                       translateY(0px)

    100%
        transform                       translateY(-10px)


/* Mediaqueries Tablet and Desktop ( >= 640px) */
@media all and ( min-width: $smallScreenContentMaxWidth )

    .mod-hero
        height                          calc( 100vh - 75px )


/* Mediaqueries Desktop ( >= 960px) */
@media all and ( min-width: $mediumScreenContentMaxWidth )

    .mod-hero
        height                          660px

    .mod-hero-img
        min-width                       1600px
        width                           100%
        height                          auto

    .mod-hero-content
        max-width                       $mediumScreenContentMaxWidth

    .mod-hero-baseline
        font-size                       1.6rem
        line-height                     1.5

        h1
            strong
                display                 inline-block
                font-size               5rem

            br
                display                 block


/* Mediaqueries Large ( >= 1400px) */
@media all and ( min-width: $largeScreenContentMaxWidth )

    .mod-hero-content
        max-width                       $largeScreenContentMaxWidth

    .mod-hero-baseline
        font-size                       1.8rem
        line-height                     1.5

        h1
            strong
                display                 inline-block
                font-size               5.2rem

